--- a/_Ipsa/WebContent/view.html
+++ b/_Ipsa/WebContent/view.html
@@ -22,23 +22,20 @@
             </div>
             <div class="navbar_menu">
                 <ul class="top_navbar">
-                    <div class="navbar_item" style="display: inline-block;" onclick="location.href='board.html'"><a
-                            href="#">예약문의</a></div>
-                    <div class="navbar_item" style="display: inline-block;" onclick="location.href='review.html'"><a
-                            href="#">기타문의</a></div>
+                
                 </ul>
             </div>
         </div>
     </header>
     <div class="board_wrap_detail">
         <div class="board_title">
-            <a href="board.html"><strong>예약 및 문의</strong></a>
-            <p>IPSA의 예약 및 문의를 자유롭게 할수있는 게시판입니다. </p>
+            <a href="board.html"><strong>자주 묻는 질문</strong></a>
+            <p>IPSA에게 물어보는 대표 질문입니다. </p>
         </div>
         <div class="board_list_wrap">
             <div class="board_view">
                 <div class="title">
-                    * 예약 * 강남지점 예약문의 드립니다.
+                    * QnA * 지점은 몇개의 지점이있나요?
                 </div>
                 <div class="info">
                     <dl>
@@ -59,13 +56,12 @@
                     </dl>
                 </div>
                 <div class="cont">
-                    안녕하세요 !!<br>
-                    10월초쯤에 강남지점 예약문의 드려요.<br>
+                    * 답변 * 현재 저희 IPSA에 존재하는 지점은  <br>
+                    구로점,종로점,강남점 총 "3개"의 지점이 분포 되어있습니다.<br>
                 </div>
             </div>
             <div class="bt_wrap">
                 <a href="board.html" class="on">목록</a>
-                <a href="edit.html" class="off">수정</a>
             </div>
         </div>
     </div>
