--- a/_Ipsa/WebContent/view4.html
+++ b/_Ipsa/WebContent/view4.html
@@ -22,23 +22,20 @@
             </div>
             <div class="navbar_menu">
                 <ul class="top_navbar">
-                    <div class="navbar_item" style="display: inline-block;" onclick="location.href='board.html'"><a
-                            href="#">예약문의</a></div>
-                    <div class="navbar_item" style="display: inline-block;" onclick="location.href='review.html'"><a
-                            href="#">기타문의</a></div>
+                  
                 </ul>
             </div>
         </div>
     </header>
     <div class="board_wrap_detail">
         <div class="board_title">
-            <a href="board.html"><strong>예약 및 문의</strong></a>
-            <p>IPSA의 예약 및 문의를 자유롭게 할수있는 게시판입니다. </p>
+            <a href="board.html"><strong>자주 묻는 질문</strong></a>
+            <p>IPSA에게 물어보는 대표 질문입니다. </p>
         </div>
         <div class="board_list_wrap">
             <div class="board_view">
                 <div class="title">
-                    * 예약 * 급합니다 빠르게 예약 가능한곳
+                    * QnA * IPSA만의 장점이 뭔가요?
                 </div>
                 <div class="info">
                     <dl>
@@ -59,13 +56,12 @@
                     </dl>
                 </div>
                 <div class="cont">
-                    다음주 부터 빠르게 들어갈수 있는 오피스 구해요<br>
-                    (위치는 무관합니다)<br>
+                    * 답변 * 저희 IPSA에게 있어 최고의 장점은 누구나 부담없이 입주 할수있는 <br>
+                    저렴함과 가성비입니다.<br>
                 </div>
             </div>
             <div class="bt_wrap">
                 <a href="board.html" class="on">목록</a>
-                <a href="edit.html" class="off">수정</a>
             </div>
         </div>
     </div>
