--- a/_Ipsa/WebContent/board.html
+++ b/_Ipsa/WebContent/board.html
@@ -23,22 +23,18 @@
             </div>
             <div class="navbar_menu">
                 <ul class="top_navbar">
-                    <div class="navbar_item" style="display: inline-block;" onclick="location.href='board.html'"><a
-                            href="#">예약문의</a></div>
-                    <div class="navbar_item" style="display: inline-block;" onclick="location.href='review.html'"><a
-                            href="#">기타문의</a></div>
                 </ul>
             </div>
         </div>
     </header>
     <div class="board_wrap">
         <div class="board_title">
-            <a href="board.html"><strong>예약문의</strong></a>
-            <p>IPSA의 예약문의를 자유롭게 할수있는 게시판입니다. </p>
+            <a href="board.html"><strong>자주 묻는 질문</strong></a>
+            <p>IPSA에게 물어보는 대표 질문입니다. </p>
         </div>
         <div id="wrab">
             <form action="" autocomplete="on">
-                <input id="search" name="search" type="search" placeholder="어떤 문의를 찿으시나요?"><input id="search_submit"
+                <input id="search" name="search" type="search" placeholder="IPSA에게 물어봐 ~ !"><input id="search_submit"
                     value="Rechercher" type="submit">
             </form>
         </div>
@@ -46,64 +42,47 @@
             <div class="board_list">
                 <div class="top">
                     <div class="num">번호</div>
-                    <div class="title">제목</div>
+                    <div class="title">질문</div>
                     <div class="writer">작성자</div>
                     <div class="date">작성일</div>
                     <div class="count">조회</div>
                 </div>
                 <div>
                     <div class="num">1</div>
-                    <div class="title"><a href="view.html"> * 예약 * 강남점 예약문의 드립니다.</a></div>
+                    <div class="title"><a href="view.html"> * QnA * 지점은 몇개의 지점이있나요? </a></div>
                     <div class="writer">sp***님</div>
                     <div class="date">2021.09.28</div>
-                    <div class="count">4</div>
+                    <div class="count">2</div>
                 </div>
                 <div>
                     <div class="num">2</div>
-                    <div class="title"><a href="view2.html"> * 예약 * 구로점 예약 언제 가능한가요?</a></div>
+                    <div class="title"><a href="view2.html"> * QnA * IPSA에는 어떤시설이 있나요?</a></div>
                     <div class="writer">52***님</div>
                     <div class="date">2021.06.11</div>
-                    <div class="count">120</div>
+                    <div class="count">2</div>
                 </div>
                 <div>
                     <div class="num">3</div>
-                    <div class="title"><a href="view3.html"> * 예약 * 강남점 예약건의입니다. </a></div>
+                    <div class="title"><a href="view3.html"> * QnA * IPSA는 당일예약이 가능한가요? </a></div>
                     <div class="writer">ho***님</div>
                     <div class="date">2021.05.11</div>
-                    <div class="count">48</div>
+                    <div class="count">1</div>
                 </div>
                 <div>
                     <div class="num">4</div>
-                    <div class="title"><a href="view4.html"> * 예약 * 급합니다 빠르게 예약 가능한곳 </a></div>
+                    <div class="title"><a href="view4.html"> * QnA * IPSA만의 장점이 뭔가요? </a></div>
                     <div class="writer">qq***님</div>
                     <div class="date">2021.05.01</div>
                     <div class="count">2</div>
                 </div>
                 <div>
                     <div class="num">5</div>
-                    <div class="title"><a href="view5.html"> * 예약 * 종로점 예약시간 문의</a></div>
+                    <div class="title"><a href="view5.html"> * QnA * IPSA의 특징이 뭔가요? </a></div>
                     <div class="writer">se***님</div>
                     <div class="date">2021.03.11</div>
-                    <div class="count">210</div>
+                    <div class="count">3</div>
                 </div>
 
-            </div>
-            <div class="board_page">
-                <a href="#" class="bt first">
-                    &lt;&lt;</a>
-                <a href="#" class="bt prev">
-                    &lt;</a>
-                <a href="" class="num on">1</a>
-                <a href="" class="num">2</a>
-                <a href="" class="num">3</a>
-                <a href="" class="num">4</a>
-                <a href="" class="num">5</a>
-                <a href="#" class="bt next">&gt;</a>
-                <a href="#" class="bt last">&gt;&gt;</a>
-            </div>
-            <div class="bt_wrap">
-                <a href="write.html" class="on">등록</a>
-                <!--<a href="#">수정</a>-->
             </div>
         </div>
     </div>
