--- a/_Ipsa/WebContent/view2.html
+++ b/_Ipsa/WebContent/view2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 
@@ -22,23 +23,20 @@
             </div>
             <div class="navbar_menu">
                 <ul class="top_navbar">
-                    <div class="navbar_item" style="display: inline-block;" onclick="location.href='board.html'"><a
-                            href="#">예약문의</a></div>
-                    <div class="navbar_item" style="display: inline-block;" onclick="location.href='review.html'"><a
-                            href="#">기타문의</a></div>
+                   
                 </ul>
             </div>
         </div>
     </header>
     <div class="board_wrap_detail">
         <div class="board_title">
-            <a href="board.html"><strong>예약 및 문의</strong></a>
-            <p>IPSA의 예약 및 문의를 자유롭게 할수있는 게시판입니다. </p>
+            <a href="board.html"><strong>자주 묻는 질문</strong></a>
+            <p>IPSA에게 물어보는 대표 질문입니다.</p>
         </div>
         <div class="board_list_wrap">
             <div class="board_view">
                 <div class="title">
-                    * 예약 * 구로점 예약 언제 가능한가요?
+                    * QnA * IPSA에는 어떤시설이 있나요?
                 </div>
                 <div class="info">
                     <dl>
@@ -59,14 +57,13 @@
                     </dl>
                 </div>
                 <div class="cont">
-                    안녕하십니까 ~ ? <br>
-                    3월때쯤 부터 6월까지 구로점 예약하고 싶어서 문의드려요 ~<br>
-                    혹시 가능한지 알고싶고 불가능하다면 예약은 언제 가능한가요?<br>
+                    * 답변 * 저희 IPSA는 입주민들을 위해 최고의 시설을 제공하고있으며, <br>
+                    업무의 질을 높이기 위한 고사양 PC <br>
+                    업무에 지친 분들을 위한 다양한 스낵바 등이 구비되어있습니다.<br>
                 </div>
             </div>
             <div class="bt_wrap">
                 <a href="board.html" class="on">목록</a>
-                <a href="edit.html" class="off">수정</a>
             </div>
         </div>
     </div>
