--- a/_Ipsa/WebContent/view3.html
+++ b/_Ipsa/WebContent/view3.html
@@ -22,23 +22,19 @@
             </div>
             <div class="navbar_menu">
                 <ul class="top_navbar">
-                    <div class="navbar_item" style="display: inline-block;" onclick="location.href='board.html'"><a
-                            href="#">예약문의</a></div>
-                    <div class="navbar_item" style="display: inline-block;" onclick="location.href='review.html'"><a
-                            href="#">기타문의</a></div>
-                </ul>
+                                  </ul>
             </div>
         </div>
     </header>
     <div class="board_wrap_detail">
         <div class="board_title">
-            <a href="board.html"><strong>예약 및 문의</strong></a>
-            <p>IPSA의 예약 및 문의를 자유롭게 할수있는 게시판입니다. </p>
+            <a href="board.html"><strong>자주 묻는 질문</strong></a>
+            <p>IPSA에게 물어보는 대표 질문입니다. </p>
         </div>
         <div class="board_list_wrap">
             <div class="board_view">
                 <div class="title">
-                    * 예약 * 강남점 예약건의입니다.
+                    * QnA * IPSA는 당일예약이 가능한가요?
                 </div>
                 <div class="info">
                     <dl>
@@ -59,13 +55,11 @@
                     </dl>
                 </div>
                 <div class="cont">
-                    안녕하세요 길게는 아니고 짧게 오피스를 예약하고 싶은대<br>
-                    한 1주 ~ 2주정도의 짧은기간도 예약이 가능한가요?<br>
+                    * 답변 * 저희 IPSA는 그 날에 예약일정이 없다면 언제든지 예약이 가능합니다 ! <br>
                 </div>
             </div>
             <div class="bt_wrap">
                 <a href="board.html" class="on">목록</a>
-                <a href="edit.html" class="off">수정</a>
             </div>
         </div>
     </div>
